fix : Loading page not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,11 @@ hr {
   opacity: 0.2;
 }
 
+/*Semantic-ui Spinner*/
+.ui.inline.loader {
+  top: 480px;
+}
+
 .projects-list li {
   padding-right: 7%;
   text-transform: uppercase;
@@ -211,9 +216,6 @@ header {
   color: white;
   opacity: 1;
 }
-.personal-profile__social {
-  margin-bottom: 25px;
-}
 
 /*about me section*/
 
@@ -372,6 +374,7 @@ li span.active {
   display: flex;
   border: 1px solid #f1f1f1;
   height: 380px;
+  /*transition: all 1s ease 3s;*/
 }
 
 .project-details {
@@ -451,17 +454,6 @@ li span.active {
   object-fit: contain;
 }
 
-.source-btn {
-  font-family: Roboto Mono, monospace;
-  line-height: 14px;
-  font-weight: 700;
-  padding: 7px;
-  color: white;
-  border: 0;
-  background: #6d56c1;
-  border-radius: 3px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.14);
-}
 /*Footer*/
 .footer {
   margin-top: 35px;
